--- a/model_bbox/Hybrid_woNoF_multiGPU.ipynb
+++ b/model_bbox/Hybrid_woNoF_multiGPU.ipynb
@@ -41,24 +41,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.losses import categorical_crossentropy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
+   "source": [
+    "from keras.losses import categorical_crossentropy\n",
+    "from keras.metrics import categorical_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5f389aba4b3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mRFCN_MODEL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'resnet101_rfcn_ohem_iter_30000'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mCROP_MODEL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'resnet50_FT38_Hybrid_woNoF'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mCROP_MODEL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mCROP_MODEL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mCHECKPOINT_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mCROP_MODEL\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/checkpoint/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
@@ -85,6 +100,7 @@
     "COLS = 224\n",
     "BATCHSIZE = 64\n",
     "LEARNINGRATE = 1e-4\n",
+    "NUM_GPUS = 1\n",
     "def featurewise_center(x):\n",
     "    mean = np.mean(x, axis=0, keepdims=True)\n",
     "    mean = np.mean(mean, axis=(1,2), keepdims=True)\n",
@@ -362,7 +378,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -422,6 +440,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def average_gradients(tower_grads):\n",
+    "    \"\"\"Calculate the average gradient for each shared variable across all towers.\n",
+    "    Note that this function provides a synchronization point across all towers.\n",
+    "    Args:\n",
+    "    tower_grads: List of lists of (gradient, variable) tuples. The outer list\n",
+    "      is over individual gradients. The inner list is over the gradient\n",
+    "      calculation for each tower.\n",
+    "    Returns:\n",
+    "     List of pairs of (gradient, variable) where the gradient has been averaged\n",
+    "     across all towers.\n",
+    "    \"\"\"\n",
+    "    average_grads = []\n",
+    "    for grad_and_vars in zip(*tower_grads):\n",
+    "        # Note that each grad_and_vars looks like the following:\n",
+    "        #   ((grad0_gpu0, var0_gpu0), ... , (grad0_gpuN, var0_gpuN))\n",
+    "        grads = []\n",
+    "        for g, _ in grad_and_vars:\n",
+    "            # Add 0 dimension to the gradients to represent the tower.\n",
+    "            expanded_g = tf.expand_dims(g, 0)\n",
+    "\n",
+    "            # Append on a 'tower' dimension which we will average over below.\n",
+    "            grads.append(expanded_g)\n",
+    "\n",
+    "        # Average over the 'tower' dimension.\n",
+    "        grad = tf.concat(0, grads)\n",
+    "        grad = tf.reduce_mean(grad, 0)\n",
+    "\n",
+    "        # Keep in mind that the Variables are redundant because they are shared\n",
+    "        # across towers. So .. we will just return the first tower's pointer to\n",
+    "        # the Variable.\n",
+    "        v = grad_and_vars[0][1]\n",
+    "        grad_and_var = (grad, v)\n",
+    "        average_grads.append(grad_and_var)\n",
+    "    return average_grads"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -441,25 +503,55 @@
     "    # and as a repository for shared variables\n",
     "    model = create_model_VGG16()\n",
     "    \n",
+    "    opt = tf.train.GradientDescentOptimizer(lr)\n",
+    "    \n",
+    "#     tower_grads = []\n",
+    "#     for i in xrange(NUM_GPUS):\n",
+    "#         with tf.device('/gpu:%d' % i):\n",
+    "#             with tf.name_scope('%s_%d' % (tower, i)) as scope:\n",
+    "#                 # Calculate the loss for one tower of the CIFAR model. This function\n",
+    "#                 # constructs the entire CIFAR model but shares the variables across\n",
+    "#                 # all towers.\n",
+    "#                 preds = model(x_0)  # all ops in the replica will live on GPU:0\n",
+    "#                 loss = tf.reduce_mean(categorical_crossentropy(y_0, preds_0))\n",
+    "\n",
+    "#                 # Calculate the gradients for the batch of data on this CIFAR tower.\n",
+    "#                 grads = opt.compute_gradients(loss)\n",
+    "\n",
+    "#                 # Keep track of the gradients across all towers.\n",
+    "#                 tower_grads.append(grads)\n",
+    "\n",
+    "    \n",
+    "    \n",
     "# replica 0\n",
     "with tf.device('/gpu:0'):\n",
     "    preds_0 = model(x_0)  # all ops in the replica will live on GPU:0\n",
-    "    loss = tf.reduce_mean(categorical_crossentropy(y_0, preds_0))\n",
-    "    train_step = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "    loss_0 = tf.reduce_mean(categorical_crossentropy(y_0, preds_0))\n",
+    "    grads_0 = opt.compute_gradients(loss)\n",
     "\n",
-    "# replica 1\n",
-    "with tf.device('/gpu:1'):\n",
-    "    preds_1 = model(x_1)  # all ops in the replica will live on GPU:1\n",
+    "# # replica 1\n",
+    "# with tf.device('/gpu:1'):\n",
+    "#     preds_1 = model(x_1)  # all ops in the replica will live on GPU:1\n",
     "\n",
     "# merge outputs on CPU\n",
-    "with tf.device('/cpu:0'):\n",
-    "    preds = 0.5 * (output_0 + output_1)\n",
-    "    loss = tf.reduce_mean(categorical_crossentropy(labels, preds))\n",
+    "with tf.device('/cpu:0'):    \n",
+    "    loss = loss_0\n",
+    "    grads = average_gradients([grads_0])\n",
+    "    apply_gradient_op = opt.apply_gradients(grads)\n",
+    "    update_ops = []\n",
+    "    for old_value, new_value in model.updates:\n",
+    "        update_ops.append(tf.assign(old_value, new_value))\n",
+    "    train_op = tf.group(apply_gradient_op, *update_ops)\n",
     "    \n",
-    "\n",
+    "    \n",
     "# we only run the `preds` tensor, so that only the two\n",
     "# replicas on GPU get run (plus the merge op on CPU)\n",
-    "output_value = sess.run([preds], feed_dict={x_0: data, x_1: data})"
+    "with sess.as_default():\n",
+    "    for step in xrange(FLAGS.max_steps):\n",
+    "        start_time = time.time()\n",
+    "        batch = mnist_data.train.next_batch(50)\n",
+    "        _, loss_value = sess.run([train_op, loss], feed_dict={x_0: batch[0], y_0: batch[1], K.learning_phase(): 1})\n",
+    "        duration = time.time() - start_time"
    ]
   },
   {
