--- a/model_bbox/VGG13_Hybrid_woNoF/VGG13_Hybrid_woNoF.ipynb
+++ b/model_bbox/VGG13_Hybrid_woNoF/VGG13_Hybrid_woNoF.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "weights.212-0.5219.hdf5\n",
+    "loss: 1.1229 - acc: 0.7779 - val_loss: 0.5219 - val_acc: 0.8030"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -520,7 +528,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
