--- a/model_bbox/resnet19ss_Hybrid_woNoF/resnet19ss_Hybrid_woNoF.ipynb
+++ b/model_bbox/resnet19ss_Hybrid_woNoF/resnet19ss_Hybrid_woNoF.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "no centered data\n",
+    "weights.265-0.2277.hdf5\n",
+    "loss: 0.0857 - acc: 0.9866 - val_loss: 0.2277 - val_acc: 0.9416"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
