--- a/model_bbox/resnet50_FT38_Classifier_Rep2/Classifier_rep2.ipynb
+++ b/model_bbox/resnet50_FT38_Classifier_Rep2/Classifier_rep2.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "weights.082-0.0874.hdf5\n",
+    "loss: 0.0843 - acc: 0.9916 - val_loss: 0.0874 - val_acc: 0.9770\n",
+    "ALB      0.124283\n",
+    "BET      0.442586\n",
+    "DOL      0.678694\n",
+    "LAG      0.000818\n",
+    "NoF      0.061490\n",
+    "OTHER    0.289067\n",
+    "SHARK    0.000414\n",
+    "YFT      0.178863\n",
+    "Name: logloss, dtype: float64\n",
+    "0.0873555796313"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -1024,7 +1042,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
